# Scraping

./: .flake8  .gitignore  CICD.md  MONITORING.md  README.md  SUPABASE_AUTH_SETUP.md  context  docker-compose.yml  package-lock.json  package.json
Errors from ci/: cd workflow
backend/: .env.example  .env.test  CICD.md  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
backend/.github/workflows/: backend.yml  ci.yml  test.yml
backend/app/: __init__.py  main.py  worker.py
backend/app/core/: __init__.py  auth.py  config.py  supabase.py
backend/app/models/: __init__.py  project.py  result.py  run.py  schedule.py  template.py
backend/app/routers/: __init__.py  projects.py  results.py  runs.py  schedules.py  stream.py  templates.py
backend/app/schemas/: __init__.py  project.py  result.py  run.py  schedule.py  template.py
backend/app/services/: __init__.py  project_service.py  result_service.py  run_service.py  schedule_service.py  template_service.py
backend/scripts/: README.md  dev.sh  init_runs_table.sql  init_supabase.sql  init_templates_table.sql  test_templates_api.sh
backend/supabase/: config.toml
backend/supabase/migrations/: 20240101000003_create_schedules_table.sql
backend/tests/: README.md  conftest.py  mocks.py  test_auth.py  test_health.py  test_projects_api.py  test_runs_api.py
backend/tests/api/: test_schedules.py  test_templates.py
frontend/: .env.local.example  .env.production  .env.sentry-build-plugin  .eslintrc.json  .vercelignore  README.md  instrumentation-client.ts  next.config.mjs  package-lock.json  package.json  sentry.client.config.js  sentry.edge.config.ts  sentry.server.config.js  sentry.server.config.ts  tailwind.config.js  vercel.json
scripts/: fix_imports.py  fix_lint.py  init_results_table.sql  run_migrations.sh  (+1 more)
(+172 files in other folders)
